scss/partials/_dashboard_layout.scss
div.dashboard-layout {
  padding: 0;
  width: 100%;
  overflow: visible;

  div.dashboard-layout-container {
    padding: 40px 0px;
    margin: 0 auto;
    width: auto;
    width: 100%;

    div.board-container {
      margin-right: 36px;
      width: #{$board_container_width}px;
      background-color: $oc_gray_8;
      left: 50%;

      div.board-name {
        float: left;
        margin-left: 15px;

        span.board-name-span {
          @include avenir_M();
          font-size: 32px;
          color: $carrot_gray;

          .emojione {
            @include emoji-size(32);
          }
        }

        button.board-settings-bt {
          float: right;
          background-image: cdnUrl("/img/ML/board_settings.svg");
          background-size: 8px 8px;
          background-repeat: no-repeat;
          background-position: 6px 7px;
          background-color: #F0EFEA;
          border-radius: 10px;
          width: 20px;
          height: 20px;
          margin-top: 11px;
          margin-left: 7px;
          opacity: 0.8;

          &:hover {
            opacity: 1;
          }
        }
      }

      div.private-board {
        @include avenir_M();
        font-size: 14px;
        color: rgba(#34414F, 0.5);
        position: relative;
        padding-left: 16px;
        float: left;
        margin-top: 12px;
        margin-left: 16px;

        &:before {
          content: "";
          background-image: cdnUrl("/img/ML/board_private.svg");
          background-size: 8px 10px;
          background-repeat: no-repeat;
          width: 8px;
          height: 10px;
          position: absolute;
          top: 3px;
          left: 0px;
        }
      }

      div.public-board {
        @include avenir_M();
        font-size: 14px;
        color: rgba(#34414F, 0.5);
        position: relative;
        padding-left: 16px;
        float: left;
        margin-top: 12px;
        margin-left: 16px;

        &:before {
          content: "";
          background-image: cdnUrl("/img/ML/board_public.svg");
          background-size: 10px 10px;
          background-repeat: no-repeat;
          width: 10px;
          height: 10px;
          position: absolute;
          top: 4px;
          left: 0px;
        }
      }

      div.new-post-top-dropdown-container {
        position: relative;
        float: right;

        button.add-to-board-top-button {
          width: 143px;
          height: 42px;
          background-color: $carrot_orange_light;
          color: $carrot_orange;
          border-radius: 100px;
          padding: 10px 22px;
          margin-right: 16px;
          margin-top: -3px;
          border: 2px solid transparent;
          opacity: 1;
          transition: 0ms;
          cursor: pointer;

          &:hover, &:active, &:focus, &.active {
            background-color: $carrot_orange;
            color: white;
            opacity: 1;

            div.add-to-board-pencil {
              background-image: cdnUrl("/img/ML/add_to_board_pencil_white.svg");
            }

            label.add-to-board-label {
              color: white;
            }
          }

          &:active, &:focus {
            background-color: #ED4F3B;
            opacity: 1;
          }

          div.add-to-board-pencil {
            background-image: cdnUrl("/img/ML/add_to_board_pencil_orange.svg");
            background-size: 14px 14px;
            width: 14px;
            height: 14px;
            margin: 3px 6px 0px 0px;
            padding: 0;
            float: left;
            cursor: pointer;
          }

          label.add-to-board-label {
            @include avenir_H();
            font-size: 16px;
            color: $carrot_orange;
            float: left;
            cursor: pointer;
          }
        }

        div.dropdown-list-container {
          top: 46px;
          width: 200px;
          left: -26px;
        }
      }
    }

    div.new-post-floating-dropdown-container {
      position: relative;
      position: absolute;
      position: fixed;
      bottom: 24px;
      right: 24px;

      button.add-to-board-floating-button {
        width: 66px;
        height: 66px;
        border-radius: 33px;
        background-color: #FA6654;
        z-index: 1000;
        box-shadow: 0px 4px 6px 0px rgba(#807D76, 0.4);
        opacity: 1;

        &:hover, &.active {
          background-color: #FF7C6C;
          opacity: 1;
        }

        &:active, &:focus {
          background-color: #ED4F3B;
          opacity: 1;
        }

        div.add-to-board-pencil {
          background-image: cdnUrl("/img/ML/add_to_board_pencil_white.svg");
          background-size: 24px 24px;
          width: 24px;
          height: 24px;
          margin-left: 6px;
          margin-top: 2px;
        }
      }

      div.dropdown-list-container {
        top: unset;
        bottom: 0px;
        width: 200px;
        left: -220px;
        z-index: 100;

        div.triangle {
          transform: rotate(135deg);
          top: unset;
          bottom: 20px;
          left: unset;
          right: -10px;
        }
      }
    }
  }
}

